--- a/4 - Natural Language Processing/assignments/2 - Language modelling with PGM and Neural Networks/Assignment 2 - Recognize named entities on Twitter with LSTMs.ipynb
+++ b/4 - Natural Language Processing/assignments/2 - Language modelling with PGM and Neural Networks/Assignment 2 - Recognize named entities on Twitter with LSTMs.ipynb
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -929,15 +929,15 @@
     "model = BiLSTMModel(vocabulary_size=len(token2idx)+2,\n",
     "                    # Required for the special tokens ['<UNK>', '<PAD>']\n",
     "                    n_tags=len(tag2idx),\n",
-    "                    embedding_dim=200,\n",
-    "                    n_hidden_rnn=200,\n",
+    "                    embedding_dim=400,  ### 200 (default) ==> 400\n",
+    "                    n_hidden_rnn=400,   ### 200 (default) ==> 400\n",
     "                    PAD_index=token2idx['<PAD>'])\n",
     "\n",
     "batch_size = 32\n",
-    "n_epochs = 4\n",
+    "n_epochs = 6    ### 4 (default) ==> 10  ==> 6\n",
     "learning_rate = 0.005\n",
     "learning_rate_decay = np.sqrt(2)\n",
-    "dropout_keep_probability = 0.5"
+    "dropout_keep_probability = 0.55   ### 0.5 (default) ==> 0.55"
    ]
   },
   {
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {
     "scrolled": false
    },
@@ -967,49 +967,71 @@
      "text": [
       "Start training... \n",
       "\n",
-      "-------------------- Epoch 1 of 4 --------------------\n",
+      "-------------------- Epoch 1 of 6 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 70431 phrases; correct: 138.\n",
+      "processed 105778 tokens with 4489 phrases; found: 74553 phrases; correct: 199.\n",
       "\n",
-      "precision:  0.20%; recall:  3.07%; F1:  0.37\n",
+      "precision:  0.27%; recall:  4.43%; F1:  0.50\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 8536 phrases; correct: 22.\n",
+      "processed 12836 tokens with 537 phrases; found: 9053 phrases; correct: 20.\n",
       "\n",
-      "precision:  0.26%; recall:  4.10%; F1:  0.48\n",
+      "precision:  0.22%; recall:  3.72%; F1:  0.42\n",
       "\n",
-      "-------------------- Epoch 2 of 4 --------------------\n",
+      "-------------------- Epoch 2 of 6 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 1570 phrases; correct: 553.\n",
+      "processed 105778 tokens with 4489 phrases; found: 2644 phrases; correct: 1373.\n",
       "\n",
-      "precision:  35.22%; recall:  12.32%; F1:  18.25\n",
+      "precision:  51.93%; recall:  30.59%; F1:  38.50\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 162 phrases; correct: 49.\n",
+      "processed 12836 tokens with 537 phrases; found: 204 phrases; correct: 113.\n",
       "\n",
-      "precision:  30.25%; recall:  9.12%; F1:  14.02\n",
+      "precision:  55.39%; recall:  21.04%; F1:  30.50\n",
       "\n",
-      "-------------------- Epoch 3 of 4 --------------------\n",
+      "-------------------- Epoch 3 of 6 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 4627 phrases; correct: 1997.\n",
+      "processed 105778 tokens with 4489 phrases; found: 4673 phrases; correct: 3237.\n",
       "\n",
-      "precision:  43.16%; recall:  44.49%; F1:  43.81\n",
+      "precision:  69.27%; recall:  72.11%; F1:  70.66\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 346 phrases; correct: 135.\n",
+      "processed 12836 tokens with 537 phrases; found: 370 phrases; correct: 174.\n",
       "\n",
-      "precision:  39.02%; recall:  25.14%; F1:  30.58\n",
+      "precision:  47.03%; recall:  32.40%; F1:  38.37\n",
       "\n",
-      "-------------------- Epoch 4 of 4 --------------------\n",
+      "-------------------- Epoch 4 of 6 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 5002 phrases; correct: 2693.\n",
+      "processed 105778 tokens with 4489 phrases; found: 4603 phrases; correct: 3923.\n",
       "\n",
-      "precision:  53.84%; recall:  59.99%; F1:  56.75\n",
+      "precision:  85.23%; recall:  87.39%; F1:  86.30\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 424 phrases; correct: 160.\n",
+      "processed 12836 tokens with 537 phrases; found: 369 phrases; correct: 192.\n",
       "\n",
-      "precision:  37.74%; recall:  29.80%; F1:  33.30\n",
+      "precision:  52.03%; recall:  35.75%; F1:  42.38\n",
+      "\n",
+      "-------------------- Epoch 5 of 6 --------------------\n",
+      "Train data evaluation:\n",
+      "processed 105778 tokens with 4489 phrases; found: 4574 phrases; correct: 4257.\n",
+      "\n",
+      "precision:  93.07%; recall:  94.83%; F1:  93.94\n",
+      "\n",
+      "Validation data evaluation:\n",
+      "processed 12836 tokens with 537 phrases; found: 393 phrases; correct: 205.\n",
+      "\n",
+      "precision:  52.16%; recall:  38.18%; F1:  44.09\n",
+      "\n",
+      "-------------------- Epoch 6 of 6 --------------------\n",
+      "Train data evaluation:\n",
+      "processed 105778 tokens with 4489 phrases; found: 4534 phrases; correct: 4356.\n",
+      "\n",
+      "precision:  96.07%; recall:  97.04%; F1:  96.55\n",
+      "\n",
+      "Validation data evaluation:\n",
+      "processed 12836 tokens with 537 phrases; found: 399 phrases; correct: 198.\n",
+      "\n",
+      "precision:  49.62%; recall:  36.87%; F1:  42.31\n",
       "\n",
       "...training finished.\n"
      ]
@@ -1049,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1080,7 @@
        "(5795, 724, 724)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1077,29 +1099,29 @@
      "output_type": "stream",
      "text": [
       "-------------------- Train set quality: --------------------\n",
-      "processed 105778 tokens with 4489 phrases; found: 5107 phrases; correct: 3317.\n",
+      "processed 105778 tokens with 4489 phrases; found: 4541 phrases; correct: 4406.\n",
       "\n",
-      "precision:  64.95%; recall:  73.89%; F1:  69.13\n",
+      "precision:  97.03%; recall:  98.15%; F1:  97.59\n",
       "\n",
-      "\t     company: precision:   72.56%; recall:   86.78%; F1:   79.04; predicted:   769\n",
+      "\t     company: precision:   96.67%; recall:   99.22%; F1:   97.93; predicted:   660\n",
       "\n",
-      "\t    facility: precision:   13.21%; recall:   14.01%; F1:   13.60; predicted:   333\n",
+      "\t    facility: precision:   94.79%; recall:   98.41%; F1:   96.56; predicted:   326\n",
       "\n",
-      "\t     geo-loc: precision:   78.64%; recall:   93.88%; F1:   85.58; predicted:  1189\n",
+      "\t     geo-loc: precision:   98.61%; recall:   99.70%; F1:   99.15; predicted:  1007\n",
       "\n",
-      "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     8\n",
+      "\t       movie: precision:   94.37%; recall:   98.53%; F1:   96.40; predicted:    71\n",
       "\n",
-      "\t musicartist: precision:   54.38%; recall:   50.86%; F1:   52.56; predicted:   217\n",
+      "\t musicartist: precision:   96.60%; recall:   97.84%; F1:   97.22; predicted:   235\n",
       "\n",
-      "\t       other: precision:   54.96%; recall:   81.90%; F1:   65.78; predicted:  1128\n",
+      "\t       other: precision:   97.64%; recall:   98.28%; F1:   97.96; predicted:   762\n",
       "\n",
-      "\t      person: precision:   82.57%; recall:   91.99%; F1:   87.03; predicted:   987\n",
+      "\t      person: precision:   99.10%; recall:   99.10%; F1:   99.10; predicted:   886\n",
       "\n",
-      "\t     product: precision:   46.10%; recall:   66.98%; F1:   54.62; predicted:   462\n",
+      "\t     product: precision:   97.19%; recall:   97.80%; F1:   97.49; predicted:   320\n",
       "\n",
-      "\t  sportsteam: precision:  100.00%; recall:    6.45%; F1:   12.12; predicted:    14\n",
+      "\t  sportsteam: precision:   98.62%; recall:   98.62%; F1:   98.62; predicted:   217\n",
       "\n",
-      "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t      tvshow: precision:   43.86%; recall:   43.10%; F1:   43.48; predicted:    57\n",
       "\n"
      ]
     }
@@ -1111,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1119,29 +1141,29 @@
      "output_type": "stream",
      "text": [
       "-------------------- Validation set quality: --------------------\n",
-      "processed 12836 tokens with 537 phrases; found: 545 phrases; correct: 188.\n",
+      "processed 12836 tokens with 537 phrases; found: 406 phrases; correct: 207.\n",
       "\n",
-      "precision:  34.50%; recall:  35.01%; F1:  34.75\n",
+      "precision:  50.99%; recall:  38.55%; F1:  43.90\n",
       "\n",
-      "\t     company: precision:   59.34%; recall:   51.92%; F1:   55.38; predicted:    91\n",
+      "\t     company: precision:   64.44%; recall:   55.77%; F1:   59.79; predicted:    90\n",
       "\n",
-      "\t    facility: precision:    9.09%; recall:    5.88%; F1:    7.14; predicted:    22\n",
+      "\t    facility: precision:   51.61%; recall:   47.06%; F1:   49.23; predicted:    31\n",
       "\n",
-      "\t     geo-loc: precision:   68.13%; recall:   54.87%; F1:   60.78; predicted:    91\n",
+      "\t     geo-loc: precision:   70.59%; recall:   53.10%; F1:   60.61; predicted:    85\n",
       "\n",
-      "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    13\n",
       "\n",
-      "\t musicartist: precision:   15.38%; recall:   14.29%; F1:   14.81; predicted:    26\n",
+      "\t musicartist: precision:   37.50%; recall:   21.43%; F1:   27.27; predicted:    16\n",
       "\n",
-      "\t       other: precision:   15.10%; recall:   35.80%; F1:   21.25; predicted:   192\n",
+      "\t       other: precision:   35.82%; recall:   29.63%; F1:   32.43; predicted:    67\n",
       "\n",
       "\t      person: precision:   55.17%; recall:   28.57%; F1:   37.65; predicted:    58\n",
       "\n",
-      "\t     product: precision:    7.69%; recall:   14.71%; F1:   10.10; predicted:    65\n",
+      "\t     product: precision:   17.24%; recall:   14.71%; F1:   15.87; predicted:    29\n",
       "\n",
-      "\t  sportsteam: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t  sportsteam: precision:   42.86%; recall:   30.00%; F1:   35.29; predicted:    14\n",
       "\n",
-      "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     3\n",
       "\n"
      ]
     }
@@ -1153,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1161,29 +1183,29 @@
      "output_type": "stream",
      "text": [
       "-------------------- Test set quality: --------------------\n",
-      "processed 13258 tokens with 604 phrases; found: 551 phrases; correct: 199.\n",
+      "processed 13258 tokens with 604 phrases; found: 472 phrases; correct: 245.\n",
       "\n",
-      "precision:  36.12%; recall:  32.95%; F1:  34.46\n",
+      "precision:  51.91%; recall:  40.56%; F1:  45.54\n",
       "\n",
-      "\t     company: precision:   52.31%; recall:   40.48%; F1:   45.64; predicted:    65\n",
+      "\t     company: precision:   59.38%; recall:   45.24%; F1:   51.35; predicted:    64\n",
       "\n",
-      "\t    facility: precision:    8.82%; recall:    6.38%; F1:    7.41; predicted:    34\n",
+      "\t    facility: precision:   47.62%; recall:   42.55%; F1:   44.94; predicted:    42\n",
       "\n",
-      "\t     geo-loc: precision:   63.85%; recall:   50.30%; F1:   56.27; predicted:   130\n",
+      "\t     geo-loc: precision:   75.42%; recall:   53.94%; F1:   62.90; predicted:   118\n",
       "\n",
-      "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t       movie: precision:   18.18%; recall:   25.00%; F1:   21.05; predicted:    11\n",
       "\n",
-      "\t musicartist: precision:    8.70%; recall:    7.41%; F1:    8.00; predicted:    23\n",
+      "\t musicartist: precision:   28.57%; recall:    7.41%; F1:   11.76; predicted:     7\n",
       "\n",
-      "\t       other: precision:   19.75%; recall:   31.07%; F1:   24.15; predicted:   162\n",
+      "\t       other: precision:   43.33%; recall:   37.86%; F1:   40.41; predicted:    90\n",
       "\n",
-      "\t      person: precision:   56.94%; recall:   39.42%; F1:   46.59; predicted:    72\n",
+      "\t      person: precision:   50.60%; recall:   40.38%; F1:   44.92; predicted:    83\n",
       "\n",
-      "\t     product: precision:    4.69%; recall:   10.71%; F1:    6.52; predicted:    64\n",
+      "\t     product: precision:   12.50%; recall:   10.71%; F1:   11.54; predicted:    24\n",
       "\n",
-      "\t  sportsteam: precision:  100.00%; recall:    3.23%; F1:    6.25; predicted:     1\n",
+      "\t  sportsteam: precision:   32.26%; recall:   32.26%; F1:   32.26; predicted:    31\n",
       "\n",
-      "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     2\n",
       "\n"
      ]
     }
@@ -1191,6 +1213,25 @@
    "source": [
     "print('-' * 20 + ' Test set quality: ' + '-' * 20)\n",
     "test_results = eval_conll(model, sess, test_tokens, test_tags, short_report=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results\n",
+    "\n",
+    "    1. Find tags with the best quality on validation and test data.\n",
+    "    \n",
+    "company, facility, geo-loc, person\n",
+    "    \n",
+    "    2. Find tags with the worst quality on validation and test data.\n",
+    "    \n",
+    "tvshow, product, musicartist, movie\n",
+    "    \n",
+    "    3. What is the percentage of the correct phrases on test data?\n",
+    "    \n",
+    "Precision:  **51.91%** - Recall: **40.56%** - F1 Score: **45.54%**"
    ]
   },
   {
