--- a/4 - Natural Language Processing/assignments and slides/5 - Conversational chat-bots and final project/week5-project.ipynb
+++ b/4 - Natural Language Processing/assignments and slides/5 - Conversational chat-bots and final project/week5-project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final project: StackOverflow assistant bot\n",
+    "# Final project 1: StackOverflow assistant bot\n",
     "\n",
     "Congratulations on coming this far and solving the programming assignments! In this final project, we will combine everything we have learned about Natural Language Processing to construct a *dialogue chat bot*, which will be able to:\n",
     "* answer programming-related questions (using StackOverflow dataset);\n",
@@ -29,14 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File data\\dialogues.tsv is already downloaded.\n",
+      "File data\\tagged_posts.tsv is already downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
-    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../..\")\n",
     "from common.download_utils import download_project_resources\n",
     "\n",
     "download_project_resources()"
@@ -73,10 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from utils import *"
@@ -100,10 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -130,10 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tfidf_features(X_train, X_test, vectorizer_path):\n",
@@ -145,9 +146,12 @@
     "    # Pickle the trained vectorizer to 'vectorizer_path'\n",
     "    # Don't forget to open the file in writing bytes mode.\n",
     "    \n",
-    "    ######################################\n",
-    "    ######### YOUR CODE HERE #############\n",
-    "    ######################################\n",
+    "    tfidf_vectorizer = TfidfVectorizer(min_df=5, max_df=0.9, ngram_range=(1,2), token_pattern='(\\S+)')\n",
+    "    X_train = tfidf_vectorizer.fit_transform(X_train)\n",
+    "    X_test = tfidf_vectorizer.transform(X_test)\n",
+    "    \n",
+    "    with open(vectorizer_path, 'wb') as vectorizer_file:\n",
+    "        pickle.dump(tfidf_vectorizer, vectorizer_file)    \n",
     "    \n",
     "    return X_train, X_test"
    ]
@@ -161,10 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sample_size = 200000\n",
@@ -182,22 +184,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>82925</th>\n",
+       "      <td>Donna, you are a muffin.</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48774</th>\n",
+       "      <td>He was here last night till about two o'clock....</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55394</th>\n",
+       "      <td>All right, then make an appointment with her s...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90806</th>\n",
+       "      <td>Hey, what is this-an interview? We're supposed...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107758</th>\n",
+       "      <td>Yeah. He's just a friend of mine I was trying ...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     text       tag\n",
+       "82925                            Donna, you are a muffin.  dialogue\n",
+       "48774   He was here last night till about two o'clock....  dialogue\n",
+       "55394   All right, then make an appointment with her s...  dialogue\n",
+       "90806   Hey, what is this-an interview? We're supposed...  dialogue\n",
+       "107758  Yeah. He's just a friend of mine I was trying ...  dialogue"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dialogue_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2168983</th>\n",
+       "      <td>43837842</td>\n",
+       "      <td>Efficient Algorithm to compose valid expressio...</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1084095</th>\n",
+       "      <td>15747223</td>\n",
+       "      <td>Why does this basic thread program fail with C...</td>\n",
+       "      <td>c_cpp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1049020</th>\n",
+       "      <td>15189594</td>\n",
+       "      <td>Link to scroll to top not working</td>\n",
+       "      <td>javascript</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200466</th>\n",
+       "      <td>3273927</td>\n",
+       "      <td>Is it possible to implement ping on windows ph...</td>\n",
+       "      <td>c#</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1200249</th>\n",
+       "      <td>17684551</td>\n",
+       "      <td>GLSL normal mapping issue</td>\n",
+       "      <td>c_cpp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          post_id                                              title  \\\n",
+       "2168983  43837842  Efficient Algorithm to compose valid expressio...   \n",
+       "1084095  15747223  Why does this basic thread program fail with C...   \n",
+       "1049020  15189594                  Link to scroll to top not working   \n",
+       "200466    3273927  Is it possible to implement ping on windows ph...   \n",
+       "1200249  17684551                          GLSL normal mapping issue   \n",
+       "\n",
+       "                tag  \n",
+       "2168983      python  \n",
+       "1084095       c_cpp  \n",
+       "1049020  javascript  \n",
+       "200466           c#  \n",
+       "1200249       c_cpp  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stackoverflow_df.head()"
    ]
@@ -211,10 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from utils import text_prepare"
@@ -222,14 +369,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function text_prepare in module utils:\n",
+      "\n",
+      "text_prepare(text)\n",
+      "    Performs tokenization and simple preprocessing.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(text_prepare)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dialogue_df['text'] = ######### YOUR CODE HERE #############\n",
-    "stackoverflow_df['title'] = ######### YOUR CODE HERE #############"
+    "dialogue_df['text'] = dialogue_df['text'].apply(text_prepare)\n",
+    "stackoverflow_df['title'] = stackoverflow_df['title'].apply(text_prepare)"
    ]
   },
   {
@@ -251,10 +417,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -262,19 +426,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size = 360000, test size = 40000\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.concatenate([dialogue_df['text'].values, stackoverflow_df['title'].values])\n",
     "y = ['dialogue'] * dialogue_df.shape[0] + ['stackoverflow'] * stackoverflow_df.shape[0]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = ######### YOUR CODE HERE ##########\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=0)\n",
     "print('Train size = {}, test size = {}'.format(len(X_train), len(X_test)))\n",
     "\n",
-    "X_train_tfidf, X_test_tfidf = ######### YOUR CODE HERE ###########"
+    "X_train_tfidf, X_test_tfidf = tfidf_features(X_train, X_test, 'tfidf_vectorizer.pkl')"
    ]
   },
   {
@@ -286,10 +456,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
@@ -298,24 +466,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "######################################\n",
-    "######### YOUR CODE HERE #############\n",
-    "######################################"
+    "intent_recognizer = LogisticRegression(C=10, penalty='l2', random_state=0)\n",
+    "intent_recognizer.fit(X_train_tfidf, y_train);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(360000, 67481)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy = 0.991575\n"
+     ]
+    }
+   ],
    "source": [
     "# Check test accuracy.\n",
     "y_test_pred = intent_recognizer.predict(X_test_tfidf)\n",
@@ -332,10 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pickle.dump(intent_recognizer, open(RESOURCE_PATH['INTENT_RECOGNIZER'], 'wb'))"
@@ -359,10 +548,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = stackoverflow_df['title'].values\n",
@@ -371,11 +558,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size = 160000, test size = 40000\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
     "print('Train size = {}, test size = {}'.format(len(X_train), len(X_test)))"
@@ -390,10 +583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "vectorizer = pickle.load(open(RESOURCE_PATH['TFIDF_VECTORIZER'], 'rb'))\n",
@@ -410,10 +601,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.multiclass import OneVsRestClassifier"
@@ -421,24 +610,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "######################################\n",
-    "######### YOUR CODE HERE #############\n",
-    "######################################"
+    "model = LogisticRegression(C=5, penalty='l2', random_state=0)\n",
+    "tag_classifier = OneVsRestClassifier(model)\n",
+    "tag_classifier.fit(X_train_tfidf, y_train);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(160000, 67481)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy = 0.800725\n"
+     ]
+    }
+   ],
    "source": [
     "# Check test accuracy.\n",
     "y_test_pred = tag_classifier.predict(X_test_tfidf)\n",
@@ -455,10 +668,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pickle.dump(tag_classifier, open(RESOURCE_PATH['TAG_CLASSIFIER'], 'wb'))"
@@ -590,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.4"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
